changed a front page desktop letter spacing issue

--- a/public/frontPage.css
+++ b/public/frontPage.css
@@ -148,7 +148,7 @@ h1{
     color: cadetblue;
     font-weight: 200;
     top: -3vw;
-    letter-spacing: 3vw;
+    letter-spacing: 1vw;
     background: rgba(0,0,0,0.5);
 }
 
